@@ -1,3 +1,9 @@
+2018-02-22  Martin Sebor  <msebor@redhat.com>
+
+	PR tree-optimization/84480
+	* c-c++-common/Wstringop-truncation.c: Adjust text of expected warnings.
+	* g++.dg/warn/Wstringop-truncation-1.C: New test.
+
 2018-02-22  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR target/84176
